2020-05-03  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/Makefile.am (poke.text): Generate in builddir, not in
	srcdir.
	(nodelist): Likewise.  Also avoid $@.
	(clean-local): Remove nodelist and poke.text.
	* poke/poke.c (poke_docdir): New variable.
	(initialize): Initialize poke_docdir.
	* poke/pk-misc.c (doc_completion_function): Use poke_docdir to
	find the nodelist file.
	(pk_cmd_doc): Likewise for the poke.text file.
	* run.in (POKEDOCDIR): Set to top_builddir/doc.
	* testsuite/Makefile.am (check-DEJAGNU): Set POKEDOCDIR.

2020-05-03  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans3_ps_of_sizeof): Remove stale
	debugging trace.

2020-05-03  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.h (struct pkl_gen_payload): New field
	generating_pvm_struct_type.
	* libpoke/pkl-gen.c (pkl_gen_pr_decl): Break the pass if
	generating a pvm struct type.
	(pkl_gen_pr_type_struct): Set generating_pvm_struct_type.
	(pkl_gen_ps_type_struct): Clear generating_pvm_struct_type.
	* testsuite/poke.pkl/arrays-13.pk: New test.

2020-05-03  Tim Rühsen  <tim.ruehsen@gmx.de>

	* libutils/Makefile.am: New file.

2020-05-03  Tim Rühsen  <tim.ruehsen@gmx.de>

	* Makefile.am: Add libutils to SUBDIRS.
	* configure.ac: Add libutils/Makefile to AC_CONFIG_FILES.
	* libutils/Makefile.am: New file.
	* libpoke/pk-utils.c: Move to libutils/.
	* libpoke/pk-utils.h: Likewise.
	* libpoke/Makefile.am: Use libutils/libutils.la instead of
	libpoke/libpokeutils.la.
	* poke/Makefile.am: Likewise.
	* po/POTFILES.in: Add libutils/pk-utils.[ch].

2020-05-03  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/id3v1.pk (ID3V1_Tag): Add setter and getter methods.
	* testsuite/poke.id3v1/id3v1.exp: New testsuite.
	* testsuite/poke.id3v1/id3v1-1.pk: New test.
	* testsuite/poke.id3v1/id3v1-2.pk: Likewise.
	* testsuite/poke.id3v1/id3v1-3.pk: Likewise.
	* testsuite/poke.id3v1/id3v1-4.pk: Likewise.
	* testsuite/poke.id3v1/id3v1-5.pk: Likewise.
	* testsuite/poke.id3v1/id3v1-6.pk: Likewise.