@@ -1,3 +1,7 @@
+2020-05-03  Tim Rühsen  <tim.ruehsen@gmx.de>
+
+	* libpoke/pk-utils.c (pk_print_binary): Format args GNU-style.
+
 2020-05-03  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* doc/Makefile.am (poke.text): Generate in builddir, not in
